<resources>
    <string name="app_name">LolInformation</string>
    <string name="item_game_play">GamePlay</string>
    <string name="item_tournament">Tournament</string>

    <string name="string_search">Search</string>
    <string name="statistics">BASE STATISTICS</string>
    <string name="item_health">HEALTH</string>
    <string name="item_health_regen">HEALTH REGEN</string>
    <string name="item_armor">ARMOR</string>
    <string name="item_att_damage">ATTACK DAMAGE</string>
    <string name="item_mana">Mana</string>
    <string name="item_mana_regen">Mana Regen</string>
    <string name="item_speed">Move Speed</string>
    <string name="item_spell_block">SPELL BLOCK</string>
    <string name="item_att_range">ATTACK RANGE</string>
    <string name="item_dash">-</string>
    <string name="item_gold">Gold</string>
    <string name="item_score">Score</string>
    <string name="string_vs">VS</string>
    <string name="string_match">Match</string>
    <string name="string_team_preview">Team Preview</string>
    <string name="string_line_up">LineUp</string>

</resources>
