<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.test.lolinformation.ui.gameplay.detailchamp.DetailChampionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintDetail"
        loadBackground="@{viewModel.champion.bigImageUrl}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorGrayOpacity"
            app:cardCornerRadius="@dimen/dp_24"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_20">

                <TextView
                    android:id="@+id/textSerieName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:text="@{viewModel.champion.name}"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewBase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/statistics"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textSerieName" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/textViewHp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/item_health"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewBase" />

                <TextView
                    android:id="@+id/textViewHpRegen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/item_health_regen"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewHp" />

                <TextView
                    android:id="@+id/textViewHpValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@{viewModel.champion.hp + ` (+` + viewModel.champion.hpPerLevel + `)`}"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewBase" />

                <TextView
                    android:id="@+id/textViewHpRegenValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@{viewModel.champion.hpRegen + ` (+` + viewModel.champion.hpRegenPerLevel +`)`}"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewHpValue" />

                <TextView
                    android:id="@+id/textViewArmor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/item_armor"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewHpRegen" />

                <TextView
                    android:id="@+id/textViewAttDamage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/item_att_damage"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewArmor" />

                <TextView
                    android:id="@+id/textViewArmorValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@{viewModel.champion.armor + ` (+` + viewModel.champion.armorPerLevel + `)`}"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewHpRegenValue" />

                <TextView
                    android:id="@+id/textViewAttDamageValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@{viewModel.champion.attackDamage + ` (+` + viewModel.champion.attackDamagePerLevel + `)`}"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewArmorValue" />

                <TextView
                    android:id="@+id/textViewMp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/item_mana"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAttDamage" />

                <TextView
                    android:id="@+id/textViewMpValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@{viewModel.champion.mp + ` (+` + viewModel.champion.mpPerLevel + `)`}"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAttDamageValue" />

                <TextView
                    android:id="@+id/textViewMpRegen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/item_mana_regen"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMp" />

                <TextView
                    android:id="@+id/textViewMpRegenValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@{viewModel.champion.mpRegen + ` (+` + viewModel.champion.mpRegenPerLevel + `)`}"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMpValue" />

                <TextView
                    android:id="@+id/textViewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/item_speed"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMpRegen" />

                <TextView
                    android:id="@+id/textViewSpeedValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@{Double.toString(viewModel.champion.moveSpeed) }"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMpRegenValue" />

                <TextView
                    android:id="@+id/textViewAttRange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/item_att_range"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSpeed" />

                <TextView
                    android:id="@+id/textViewAttRangeValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@{Double.toString(viewModel.champion.attackRange)}"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSpeedValue" />

                <TextView
                    android:id="@+id/textViewSpellBlock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/item_spell_block"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAttRange" />

                <TextView
                    android:id="@+id/textViewSpellBlockValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@{viewModel.champion.spellBlock + ` (+` + viewModel.champion.spellBlockPerLevel + `)`}"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAttRangeValue" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
